test-data/elab/fun-expr/plicity-mismatch.snapshot
exit status: 0

stdout = """
#error : Int -> Bool

"""

stderr = """
error: Type mismatch: expected `Int -> Bool`, found `@Int -> Bool`
  ┌─ test-data/elab/fun-expr/plicity-mismatch.pion:1:25
  │
1 │ #check (fun(@x: Int) => false) : forall(x: Int) -> Bool;
  │                         ^^^^^


"""
